4.5 -> 5.0:
    - rse: allow Berkeley-DB/SQLite-specific RPM DB per-tag parameters according to dynamically selected DB API
    - rse: introduce --with-bugreport=<email-address> and require this before unsupported Autoconf operations
    - rse: simplify internal Berkeley-DB handling in rpmdb/ and allow (unsupported) --with-db=external
    - pmatilaj: remove hardcoded "libtermcap" vs. Bash kludge in lib/psm.c
    - rse: implement --without-file, i.e., building RPM without File/magic support
    - rse: use regular LIBS for linking against SELinux library
    - rse: no longer re-build db_xxx utilities in rpmdb/ -- use already built db3/ versions instead
    - rse: no longer any librpm* libraries against external third-party libraries (rely on pkg-config)
    - rse: link all internal third-party libraries into librpmmisc exclusively
    - rse: install a pkg-config(1) specification "rpm.pc" for correctly linking against the RPM C API
    - rse: consistently move libraries from Automake _LDFLAGS to _LIBADD variables
    - rse: move misc/*.c from rpmio/stubs.c into misc/librpmmisc.c and build regular librpmmisc.la
    - rse: support building without ZLib via --without-zlib
    - rse: in rpmio for LZMA use %{__lzma} macro instead of hard-coded /usr/bin/lzma when possible
    - rse: use explicit enable/disable of Perl and Python APIs
    - rse: cleanup elf(3) API related Autoconf glue
    - rse: use --enable-maintainer-mode to enable Automake rebuilds for maintainers only
    - rse: cleanup Automake specifications replace old-style INCLUDES with AM_CPPFLAGS
    - rse: allow one to control/override the /usr/lib64 use via Autoconf option --enable-build-lib64
    - rse: rename Autoconf --enable-ld-version-script to --enable-build-versionscript for consistency reasons
    - rse: make PIC/PIE/warnings build flags controllable via Autoconf --enable-build-{pic,pie,warnings}