@@ -724,8 +724,8 @@ print (t)\
 # There are different macros so that --rebuilddb can convert the
 # database between formats (usually for upgrading purposes)
 #
-%_dbapi			3
-%_dbapi_rebuild		3
+%_dbapi			@DBAPI@
+%_dbapi_rebuild		@DBAPI@
 %_dbapi_used		%{?_rpmdb_rebuild:%{_dbapi_rebuild}}%{!?_rpmdb_rebuild:%{_dbapi}}
 
 #
